<resources>
    <string name="app_name">ERP</string>
    <string name="skit_erp">SKIT ERP</string>
    <string name="erp_login">ERP LOGIN</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">Register</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_email_id">Enter Your Email id</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="enter_your_state">Enter Your State</string>
    <string name="enter_your_phone_no">Enter Your Phone No.</string>
    <string name="enter_your_confirm_paasword">Enter Your Confirm Paasword</string>
    <string name="already_registered">Already Registered</string>
</resources>