<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple_500"

    
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="99dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/skitlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/s_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="32dp"
        android:text="@string/register"
        android:textColor="#FAF4F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/s_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/enter_your_full_name"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_register" />

    <EditText
        android:id="@+id/s_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:paddingStart="5dp"
        android:ems="10"
        android:hint="@string/enter_your_email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/s_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_city"
        android:ems="10"
        android:drawablePadding="16dp"
        android:paddingStart="5dp"
        android:hint="@string/enter_your_city"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_email" />

    <EditText
        android:id="@+id/s_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_state"
        android:ems="10"
        android:drawablePadding="16dp"
        android:paddingStart="5dp"
        android:hint="@string/enter_your_state"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_city" />

    <EditText
        android:id="@+id/s_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_phone"
        android:ems="10"
        android:drawablePadding="16dp"
        android:paddingStart="5dp"
        android:hint="@string/enter_your_phone_no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_state" />

    <EditText
        android:id="@+id/s_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:drawablePadding="16dp"
        android:paddingStart="5dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_phone" />

    <EditText
        android:id="@+id/s_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_background"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/enter_your_confirm_paasword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:drawablePadding="16dp"
        android:paddingStart="5dp"
        android:textColorHint="#070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_password" />

    <Button
        android:id="@+id/s_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_confirm" />
    <Button
        android:id="@+id/s_alreadyreg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/already_registered"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>